--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Your awesome title
-author: GitHub User
+title: testtitle
+author: GitHub User1
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Google search results) and in your feed.xml site description.yes!
 
 # social links
 twitter_username: your-twitter-handle
@@ -12,4 +12,4 @@ github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-minimal
